# perceptron

./: README.md  pyproject.toml
examples/: detect_multi.py
huggingface/: __init__.py  main.py  modular_genesis.py  modular_isaac.py
perceptron/: __init__.py  pyproject.toml
perceptron/examples/: caption_basic.py  detect_icl_one_shot.py  detect_icl_two_shot.py  ocr_region.py
perceptron/sdk/: __init__.py
perceptron/src/perceptron/dsl/: perceive.py
perceptron/tensorstream/: tensor_stream_utils.py
perceptron/tests/: test_cli.py  test_highlevel_caption_ocr.py  test_highlevel_detect.py  test_streaming.py
src/perceptron/: __init__.py  cli.py  client.py  highlevel.py
tests/: test_async_perceive.py
